# learning

./: .gitignore
c/: CMakeLists.txt  ageindays.c  banknotes.c  cdu.c  distance.c  ex36.c  fspent.c  greatest.c  hipotenusa.c  minutes.c  seno1.c  simpleproduct.c  timeconversion.c
c/arquivo/: dados-empresa.txt  dados-index.txt  exemegasena.c  frame.txt  index.c  saida.txt  vini.c
c/lista1/: ex27.c  ex28.c  ex30.c  ex31.c  ex32.c  ex33.c  ex34.c  ex35.c  ex37.c  ex38.c
c/lista2/: exe1.c  exe10.c  exe11.c  exe12.c  exe13.c  exe14.c  exe15.c  exe16.c  exe17.c  exe18.c  exe19.c  exe2.c  exe20_soma_data.c  exe21_reduz_data.c  exe22.c  exe23.c  exe24.c  exe25.c  exe26.c  exe27.c  exe28.c  exe29.c  exe3.c  exe30.c  exe31.c  exe32.c  exe4.c  exe5.c  exe6.c  exe7.c  exe8.c  exe9.c
c/lista_data/: exe7.c  exe8.c  exe9  exe9.c
c/matrizes/: Matrizes Felipe 1G.c  a.c  a.out  exe11  exe11.c  exe13  exe13.c  exe14  exe14.c  exe16  exe16.c  exe1g.c  exe1h.c  teste.c
c/ponteiro/: reta.c  somadia.c
c/strings/: aulaexe1  aulaexe1.c  aulaexe2  aulaexe2.c  copystr  copystr.c  exe1  exe1.c  exe11  exe11.c  exe14.c  exe15.c  exe16.c  exe19.c  exe2.c  exe21.c  exe23.c  exe4.c  execountletter  execountletter.c  exenotasbim.c  length  length.c  maiuscula  maiuscula.c
c/tipos_dados/: exeaula1.c  index.c
c/vetores/: exe1  exe1.c  exe10.c  exe11  exe11.c  exe12  exe12.c  exe13  exe13.c  exe14  exe14.c  exe17.c  exe18.c  exe27.c  exe8  exe8.c  exe9  exedectobasen  exedectobasen.c  exedectobin  exedectobin.c
cli/omni/: package.json
next-stripe/: package.json
(+46 files in other folders)
