cmake_minimum_required(VERSION 3.13)
project(learning_c C)

set(CMAKE_C_STANDARD 99)

add_executable(ex27 lista1/ex27.c)
add_executable(ex28 lista1/ex28.c)
add_executable(ex30 lista1/ex30.c)
add_executable(ex31 lista1/ex31.c)
add_executable(ex32 lista1/ex32.c)
add_executable(ex33 lista1/ex33.c)
add_executable(ex34 lista1/ex34.c)
add_executable(ex35 lista1/ex35.c)
add_executable(ex36 ex36.c)
add_executable(ex37 lista1/ex37.c)
add_executable(ex38 lista1/ex38.c)
add_executable(reta ponteiro/reta.c)
add_executable(somadia ponteiro/somadia.c)